# MinMax

./: .gitignore  CMakeLists.txt  README.md
inc/: Game.h  Move.h  MyVector.h  SortableList.h  Timer.h
src/: main.cpp
tst/: Formula-test.cpp
